[package]
name = "temp"
version = "0.1.0"
authors = ["AleBuser <alebuser.98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
channels_lite = { git= "https://github.com/AleBuser/iota-channels-lite"}
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json","serve"]