[package]
name = "temp"
version = "0.1.0"
authors = ["AleBuser <alebuser.98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "local"
path = "src/lib.rs"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "author"
path = "src/bin/author.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "subscriber"
path = "src/bin/subscriber.rs"


[dependencies]
rocket = "0.4.4"
channels_lite = { git = "https://github.com/AleBuser/iota-channels-lite"}
iota-lib-rs = "0.4.1"
serde = "1.0.110"
serde_derive = "1.0.110"
serde_json = "1.0.53"
reqwest = "0.10.4"
tokio-core = "0.1.17"
tokio = {version = "0.2.18", features = ["macros"]}
rust-crypto = "0.2.36"


[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json","serve"]