[package]
name = "temp"
version = "0.1.0"
authors = ["AleBuser <alebuser.98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "local"
path = "src/lib.rs"

[[bin]] 
name = "author_server"
path = "src/bin/server/author_server.rs"

[[bin]] 
name = "subscriber"
path = "src/bin/clients/subscriber.rs"

[[bin]] 
name = "author"
path = "src/bin/clients/author.rs"


[dependencies]
rocket = "0.4.4"
channels_lite = { git = "https://github.com/iota-community/iota-channels-lite"}
iota-lib-rs = "0.4.1"
serde = {version="1.0.110", features = ["derive"] }
serde_derive = "1.0.110"
serde_json = "1.0.53"
reqwest = "0.10.4"
tokio-core = "0.1.17"
tokio = {version = "0.2.18", features = ["macros"]}
rust-crypto = "0.2.36"
rand = "0.7.3"
handlebars = "3.1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json","serve"]